feat: resolved some todos