@@ -15,9 +15,9 @@ import java.util.stream.Collectors;
 
 public class Island {
     private final Set<Agent> agents = new HashSet<>();
-    private boolean elite;
+    private final boolean elite;
     private Set<Island> neighbouringIslands;
-    private Random random = new Random();
+    private final Random random = new Random();
 
     public Island(boolean elite, Set<Island> neighbouringIslands) {
         this.elite = elite;
@@ -28,16 +28,20 @@ public class Island {
         agents.add(agent);
     }
 
+    public void addAgent(Set<Agent> agents) { this.agents.addAll(agents); }
+
     public void removeAgent(Agent agent) {
         agents.remove(agent);
     }
+
+    public void removeAgent(Set<Agent> agents) { this.agents.removeAll(agents); }
 
     public void evaluateAgents() {
         for (Agent agent: agents) {
             List<Agent> neighbours = getAgents().stream()
                     .filter(a -> !a.equals(this))
                     .filter(a -> a.getEnergy() > 0)
-                    .collect(Collectors.toList());
+                    .toList();
 
             int index = random.nextInt(neighbours.size());
             agent.compareTo(neighbours.get(index));
